added profile page and logout system

--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -19,10 +19,10 @@
     </ul>
   </nav>
   <header>
-    <h1>Homepage (good init?)</h1>
+    <h1>Hello hello this is your profile <%=user.username %></h1>
   </header>
   <main>
-    <p>This is the body</p>
+    <img src="<%= user.thumbnail %>" />
   </main>
 
 </body>
