--- a/views/login.ejs
+++ b/views/login.ejs
@@ -10,9 +10,13 @@
 <body>
   <nav>
     <ul>
+      <% if (!user) { %>
       <li><a href="/auth/login">Login</a></li>
+      <% } else { %>
       <li><a href="/auth/logout">Logout</a></li>
+      <% } %>
       <li><a href="/">Home</a></li>
+      <li><a href="/profile">Profile</a></li>
     </ul>
   </nav>
   <main>
